--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,25 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/dist
+dist/
+build/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-/.nx
-/.nx/cache
-/.vscode/*
-!/.vscode/extensions.json
-.idea
+.env*
+.env.*
+.nx/
+.vscode/
+!.vscode/extensions.json
+.idea/
 
 npm-debug.log*
 yarn-debug.log*
