--- a/bsfly/package.json
+++ b/bsfly/package.json
@@ -17,6 +17,8 @@
     "@capacitor/haptics": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
     "@capacitor/status-bar": "8.0.0",
+    "@clerk/clerk-react": "^5.58.1",
+    "@clerk/themes": "^2.4.43",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
     "@types/react-router": "^5.1.20",
@@ -27,7 +29,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@capacitor/cli": "8.0.0",
