--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "type": "module",
+  "scripts": {
+    "server": "nodemon index.js"
+  },
   "dependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@ionic/cli": "^7.2.1"
+    "@ionic/cli": "^7.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "nodemon": "^3.1.11",
+    "socket.io": "^4.8.1"
   }
 }
